# FormalLanguages

./: .clang-format  CMakeLists.txt  README.md  doc_2023-11-24_09-42-50.clang-format  main.cpp
include/: Automaton.h
src/: Automaton.cpp  AutomatonFromRegularExpression.cpp  CMakeLists.txt  MakeDetermined.cpp  MakeDeterministic.cpp  MakeMinimal.cpp
tests/: AutomatonTestCase.cpp  CMakeLists.txt
